Fix vote slide alignment

--- a/src/routes/Vote/Vote.less
+++ b/src/routes/Vote/Vote.less
@@ -235,6 +235,14 @@ button:disabled {
   flex-direction: column;
 }
 
+.listItemRow {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center
+}
+
 @media (max-width: 800px) {
   .content {
     flex-direction: column;
